# ontology-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/: shared-infrastructure.md
aidlc-docs/construction/plans/: u1-ontology-core-code-generation-plan.md  u1-ontology-core-functional-design-plan.md  u1-ontology-core-infrastructure-design-plan.md  u1-ontology-core-nfr-design-plan.md  u1-ontology-core-nfr-requirements-plan.md  u2-permission-code-generation-plan.md  u2-permission-functional-design-plan.md  u2-permission-nfr-requirements-plan.md  u3-retrieval-code-generation-plan.md  u3-retrieval-functional-design-plan.md  u5-audit-code-generation-plan.md  u5-audit-functional-design-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
migrations/: 0001_u1_ontology.sql  0002_u2_policies.sql  0003_u5_audit.sql
src/mini_aip/: __init__.py
tests/integration/: test_postgres_audit.py  test_postgres_policy_store.py  test_postgres_store.py
tests/pbt/: audit_generators.py  generators.py  perm_generators.py  test_audit_roundtrip.py  test_permission_invariants.py  test_roundtrip.py
tests/unit/: test_audit.py  test_ontology_service.py  test_permission_decision.py  test_permission_gateway.py  test_redaction.py  test_registry.py  test_types.py  test_validation.py
(+87 files in other folders)
